--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "path-js",
   "version": "1.0.0",
   "private": true,
-  "description": "A path utility suite that gathers several functions related to a specific path.",
+  "description": "A path utility suite that gathers several functions related to a specific path",
   "homepage": "https://github.com/ruggeryiury/path-js#readme",
   "repository": "github:ruggeryiury/path-js",
   "type": "module",
@@ -24,35 +24,29 @@
     "typescript-library"
   ],
   "scripts": {
-    "build": "pnpm run build:commonjs && pnpm run build:esmodules",
-    "build:package": "pnpm run build:commonjs && pnpm run build:esmodules && npm pack",
+    "build": "pnpm run build:commonjs && pnpm run build:esmodules && pnpm pack",
     "build:commonjs": "tsc --project ./prod.tsconfig.json",
     "build:esmodules": "tsc --project ./prod.tsconfig.json --module nodenext --moduleResolution nodenext --outDir module",
     "clear": "rimraf lib module",
     "dev": "tsx watch ./tests/exec.ts",
-    "format": "prettier --write .",
-    "lint": "eslint src",
-    "test": "vitest"
+    "format": "prettier --write src",
+    "lint": "eslint src"
   },
   "exports": {
-    ".": {
-      "require": "./lib/index.js",
-      "import": "./module/index.js",
-      "default": "./module/index.js"
-    }
+    "require": "./lib/index.js",
+    "import": "./module/index.js"
   },
   "devDependencies": {
-    "@types/node": "^20.12.10",
-    "eslint": "^9.2.0",
+    "@types/node": "^20.12.12",
+    "eslint": "^9.3.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.2.3",
-    "eslint-plugin-n": "^17.4.0",
-    "globals": "^15.1.0",
+    "eslint-plugin-jsdoc": "^48.2.5",
+    "eslint-plugin-n": "^17.7.0",
+    "globals": "^15.3.0",
     "prettier": "^3.2.5",
-    "tsx": "^4.9.3",
+    "tsx": "^4.10.5",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.8.0",
-    "vitest": "^1.6.0"
+    "typescript-eslint": "^7.9.0"
   }
 }
