--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "path-js",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "description": "A path utility suite that gathers several functions related to a specific path",
   "homepage": "https://github.com/ruggeryiury/path-js#readme",
   "repository": "github:ruggeryiury/path-js",
   "type": "module",
-  "main": "lib/index.js",
-  "module": "module/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "Ruggery Iury Corrêa <ruggeryiury@gmail.com>",
   "license": "MIT",
   "keywords": [
@@ -24,17 +24,16 @@
     "typescript-library"
   ],
   "scripts": {
-    "build": "pnpm run build:commonjs && pnpm run build:esmodules && pnpm pack",
-    "build:commonjs": "tsc --project ./prod.tsconfig.json",
-    "build:esmodules": "tsc --project ./prod.tsconfig.json --module nodenext --moduleResolution nodenext --outDir module",
-    "clear": "rimraf lib module",
+    "build": "pnpm run clear && tsc --project ./prod.tsconfig.json",
+    "clear": "rimraf dist",
     "dev": "tsx watch ./tests/exec.ts",
     "format": "prettier --write src",
     "lint": "eslint src"
   },
   "exports": {
-    "require": "./lib/index.js",
-    "import": "./module/index.js"
+    ".": {
+      "import": "./dist/index.js"
+    }
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
