--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "ES2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "noImplicitOverride": true,
+    "strict": true,
     "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "outDir": "dist",
     "declaration": true,
     "sourceMap": true,
-    "outDir": "./lib",
-    "esModuleInterop": true,
+    "lib": ["es2022"],
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
+    "verbatimModuleSyntax": true
   },
   "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": ["node_modules"]
