Update to v1.4.0: Added copyFile and integrated stringToPath method

--- a/.npmignore
+++ b/.npmignore
@@ -1,19 +1,11 @@
-/.github/
-/assets/
+assets/
 node_modules/
-/packages/
-/src/
-/tests/
+src/
+tests/
 .gitignore
 .npmignore
-.prettierignore
 eslint.config.js
+pnpm-lock.yaml
 prettier.config.js
 prod.tsconfig.json
 tsconfig.json
-pnpm-lock.yaml
-*.tgz
-*.txt
-*.env
-*.rar
-*.zip
