--- a/package.json
+++ b/package.json
@@ -33,17 +33,14 @@
   },
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "types": {
-        "import": "./dist/index.d.ts",
-        "require": "./dist/index.d.cts"
-      }
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/node": "^20.12.12",
+    "esbuild-fix-imports-plugin": "^1.0.18",
     "eslint": "^9.3.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
