Update to v3.0.0, Reverting building for both CommonJS and ESModules again

--- a/.npmignore
+++ b/.npmignore
@@ -4,9 +4,11 @@ src/
 tests/
 .gitignore
 .npmignore
+.prettierrc
 eslint.config.js
 pnpm-lock.yaml
 prettier.config.js
 prod.tsconfig.json
 tsconfig.json
+tsup.config.js
 *.tgz
