--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,17 @@
 {
   "compilerOptions": {
+    "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "target": "ES2022",
+    "target": "ES6",
     "allowJs": true,
     "resolveJsonModule": true,
-    "moduleDetection": "force",
     "noImplicitOverride": true,
-    "strict": true,
-    "module": "NodeNext",
+    "moduleResolution": "bundler",
     "outDir": "dist",
     "declaration": true,
     "sourceMap": true,
-    "lib": ["es2022"],
+    "lib": ["ES6"],
     "forceConsistentCasingInFileNames": true,
     "verbatimModuleSyntax": true
   },
